inventory-service/target/kubernetes/openshift.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2020-12-01 - 00:24:46 +0000
    app.openshift.io/vcs-url: https://github.com/RedHat-Middleware-Workshops/cloud-native-workshop-v2m4-labs.git
    app.quarkus.io/commit-id: 2f1d852aa20b53bfdc713f18eb44bec53d477475
    app.quarkus.io/vcs-url: https://github.com/RedHat-Middleware-Workshops/cloud-native-workshop-v2m4-labs.git
  labels:
    app.kubernetes.io/name: inventory
    app.kubernetes.io/version: 1.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: inventory
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: inventory
    app.kubernetes.io/version: 1.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2020-12-01 - 00:24:46 +0000
    app.openshift.io/vcs-url: https://github.com/RedHat-Middleware-Workshops/cloud-native-workshop-v2m4-labs.git
    app.quarkus.io/commit-id: 2f1d852aa20b53bfdc713f18eb44bec53d477475
    app.quarkus.io/vcs-url: https://github.com/RedHat-Middleware-Workshops/cloud-native-workshop-v2m4-labs.git
  labels:
    app.kubernetes.io/name: inventory
    app.kubernetes.io/version: 1.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: inventory
spec:
  replicas: 1
  selector:
    app.kubernetes.io/name: inventory
    app.kubernetes.io/version: 1.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.quarkus.io/build-timestamp: 2020-12-01 - 00:24:46 +0000
        app.openshift.io/vcs-url: https://github.com/RedHat-Middleware-Workshops/cloud-native-workshop-v2m4-labs.git
        app.quarkus.io/commit-id: 2f1d852aa20b53bfdc713f18eb44bec53d477475
        app.quarkus.io/vcs-url: https://github.com/RedHat-Middleware-Workshops/cloud-native-workshop-v2m4-labs.git
      labels:
        app.kubernetes.io/name: inventory
        app.kubernetes.io/version: 1.0-SNAPSHOT
        app.openshift.io/runtime: quarkus
    spec:
      containers:
      - args:
        - -jar
        - /deployments/inventory-1.0-SNAPSHOT-runner.jar
        - -cp
        - /deployments/lib/io.quarkus.quarkus-security-runtime-spi-1.7.5.Final-redhat-00007.jar:/deployments/lib/io.smallrye.reactive.mutiny-0.7.0.redhat-00001.jar:/deployments/lib/io.quarkus.security.quarkus-security-1.1.2.Final-redhat-00001.jar:/deployments/lib/io.netty.netty-codec-4.1.49.Final-redhat-00001.jar:/deployments/lib/io.netty.netty-handler-4.1.49.Final-redhat-00001.jar:/deployments/lib/io.quarkus.quarkus-netty-1.7.5.Final-redhat-00007.jar:/deployments/lib/io.netty.netty-common-4.1.4 [...]
        - -Dquarkus.http.host=0.0.0.0
        - -Djava.util.logging.manager=org.jboss.logmanager.LogManager
        command:
        - java
        image: jboss/inventory:1.0-SNAPSHOT
        imagePullPolicy: IfNotPresent
        name: inventory
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
      serviceAccount: inventory
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - inventory
      from:
        kind: ImageStreamTag
        name: inventory:1.0-SNAPSHOT
    type: ImageChange
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2020-12-01 - 00:24:46 +0000
    app.openshift.io/vcs-url: https://github.com/RedHat-Middleware-Workshops/cloud-native-workshop-v2m4-labs.git
    app.quarkus.io/commit-id: 2f1d852aa20b53bfdc713f18eb44bec53d477475
    app.quarkus.io/vcs-url: https://github.com/RedHat-Middleware-Workshops/cloud-native-workshop-v2m4-labs.git
  labels:
    app.kubernetes.io/name: inventory
    app.kubernetes.io/version: 1.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: inventory
spec:
  host: ""
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: inventory
